src/Player.scss
.Player {
  position: relative;
  display: inline-block;
  text-align: left;
  z-index: 100;

  a {
    cursor: pointer;
  }

  .controls a {
    font-family: 'Times';
    cursor: pointer;
    font-size: 1.2em;
    margin: 0 5px;
  }

  span.countdown {
    font-family: 'Times';
    font-size: 12em;
    font-weight: normal;
    color: red;
    text-shadow: 12px 12px 6px rgba(200, 150, 150, 1);
    position: fixed;
    top: 10px;
    right: 10px;

    span.small {
      font-size: 0.25em;
      display: block;
    }
  }

  .options {
    position: absolute;
    left: 0;
    top: 26px;
    width: 300px;
    color: white;
    background-color: black;
    padding: 0 10px 5px;
    border: 1px solid white;
    opacity: 0.9;
    font-size: 0.9em;

    > div {
      margin-top: 10px;

      > label {
        font-size: 0.85em;
        vertical-align: top;
      }

      > span {
        font-size: 0.9em;
        font-weight: bold;
        padding-left: 10px;
      }

      > a {
        font-size: 0.9em;
        padding-left: 10px;
      }
    }
  }
}

